--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         
         <!-- Card 2 -->
         <div class="rounded-2xl border border-slate-200 bg-white p-6 shadow-sm dark:border-slate-800 dark:bg-slate-900">
-          <h3 class="text-lg font-semibold">สิ่งที่ทำ</h3>
-          <p class="text-sm text-slate-500">Services & focus</p>
+          <h3 class="text-lg font-semibold">Technologies</h3>
+          <p class="text-sm text-slate-500">A list of technologies</p>
           <div class="mt-4 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6 gap-4 text-3xl">
 
             <i class="devicon-typescript-plain tech-icon"></i>
@@ -194,11 +194,11 @@
         <!-- Project Card -->
         <article class="overflow-hidden rounded-2xl border border-slate-200 bg-white shadow-sm dark:border-slate-800 dark:bg-slate-900">
           <div class="aspect-video w-full bg-slate-100 dark:bg-slate-800">
-            <img src="/img/web1.jpg" class="h-full w-full object-cover" alt="Anime Media Server" />
+            <img src="/img/js1.png" class="h-full w-full object-contain" alt="pj1" />
           </div>
           <div class="p-5">
-            <h3 class="text-lg font-semibold">Congrats with mbf</h3>
-            <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">made with love as a graduation gift for my friends.</p>
+            <h3 class="text-lg font-semibold">Docker Server</h3>
+            <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Access devices remotely host server manage security</p>
             <div class="mt-3 flex flex-wrap gap-2 text-xs">
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">html</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">javascript</span>
@@ -229,15 +229,15 @@
         </article>
         <article class="overflow-hidden rounded-2xl border border-slate-200 bg-white shadow-sm dark:border-slate-800 dark:bg-slate-900">
           <div class="aspect-video w-full bg-slate-100 dark:bg-slate-800">
-            <img src="..." class="h-full w-full object-cover" alt="imgpj3" />
+            <img src="/img/pj3.png" class="h-full w-full object-contain" alt="imgpj3" />
           </div>
           <div class="p-5">
-            <h3 class="text-lg font-semibold">title</h3>
-            <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">detail</p>
+            <h3 class="text-lg font-semibold">HomeLab</h3>
+            <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">guide to getting MPEG-Streamer Working with your klipper setup</p>
             <div class="mt-3 flex flex-wrap gap-2 text-xs">
-              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">...</span>
-              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">...</span>
-              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">...</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">PHP</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">Shell</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">C++</span>
             </div>
             <div class="mt-4 flex justify-end">
               <a href="#" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">Visit <i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
