--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Website-mhzmmprt</title>
-  <meta name="description" content="Minimal portfolio & landing page inspired by chokunplayz style" />
+  <meta name="description" content="Website" />
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -116,7 +116,7 @@
         <div>
           <div class="text-xs uppercase tracking-widest text-slate-500 dark:text-slate-400">About</div>
           <h2 class="text-2xl font-bold tracking-tight md:text-3xl">Get to know me</h2>
-          <p class="mt-2 max-w-2xl text-slate-600 dark:text-slate-400">If you’d like to know me better, feel free to say hi. I’ve had my shots, I don’t bite!</p>
+          <p class="mt-2 max-w-2xl text-slate-600 dark:text-slate-400">If you'd like to know me better, feel free to say hi. I've had my shots, I don't bite!</p>
         </div>
       </div>
       <div class="grid gap-6 md:grid-cols-3">
@@ -125,9 +125,9 @@
           <h3 class="text-lg font-semibold">About Me</h3>
           <p class="text-sm text-slate-500">A little about me</p>
           <div class="mt-3 space-y-2 text-sm">
-            I’m a second-year student at Silpakorn University, Faculty of Science, majoring in Information Technology. I created this site in my free time to share the things I’ve learned and my experiences along the way.
+            I'm a second-year student at Silpakorn University, Faculty of Science, majoring in Information Technology. I created this site in my free time to share the things I've learned and my experiences along the way.
         <br><br>
-        I first got interested in technology back in high school, and ever since then I’ve been exploring and learning on my own sometimes through mistakes, but always through real-life experiences.
+        I first got interested in technology back in high school, and ever since then I've been exploring and learning on my own sometimes through mistakes, but always through real-life experiences.
           </div>
           
         </div>
@@ -257,25 +257,38 @@
           <h2 class="text-2xl font-bold tracking-tight md:text-3xl">GitHub</h2>
           <p class="mt-2 max-w-2xl text-slate-600 dark:text-slate-400">sharing code on GitHub</p>
         </div>
-        <a href="/rss.xml" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">
-          <i data-lucide="link" class="h-4 w-4"></i> RSS
+        <a href="#" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">
+          <i data-lucide="link" class="h-4 w-4"></i> GIT
         </a>
       </div>
       <div class="grid gap-6 md:grid-cols-3">
         <!-- Post card template -->
         <article class="flex flex-col rounded-2xl border border-slate-200 bg-white p-5 shadow-sm dark:border-slate-800 dark:bg-slate-900">
-          <h3 class="text-lg font-semibold">Post title #1</h3>
-          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Short summary for the post, what it covers, and key takeaways.</p>
+          <h3 class="text-lg font-semibold">VMwares</h3>
+          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">NSX-T 4.1</p>
+          <div class="mt-3 space-y-2 text-sm">
+            This is the network virtualization platform for the Software-Defined Data Center (SDDC). 
+            <br>
+            VMware NSX 4.2.1.4	2025-06-04	24765227
+            <br>
+            VMware NSX 4.2.2.1	2025-06-04	24765084
+          </div>
+
           <div class="mt-auto flex items-center justify-between pt-6 text-sm text-slate-500 dark:text-slate-400">
-            <div>Aug 2025 • 5 min</div>
-            <a href="https://github.com/mhzmmrpt/bot-discord" class="inline-flex items-center gap-1 hover:underline">Read <i data-lucide="arrow-right" class="h-4 w-4"></i></a>
+            <div>Aug 2025 • By mhzmmprt</div>
+            <a href="https://www.virten.net/vmware/nsx/vmware-nsx-t-release-build-numbers/" class="inline-flex items-center gap-1 hover:underline">Read <i data-lucide="arrow-right" class="h-4 w-4"></i></a>
           </div>
         </article>
         <article class="flex flex-col rounded-2xl border border-slate-200 bg-white p-5 shadow-sm dark:border-slate-800 dark:bg-slate-900">
-          <h3 class="text-lg font-semibold">Post title #2</h3>
-          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Short summary for the post, what it covers, and key takeaways.</p>
+          <h3 class="text-lg font-semibold">Home Server</h3>
+          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Build a Docker host and Pi-hole</p>
+          <div class="mt-3 space-y-2 text-sm">
+            Getting a Docker container host up and running and starting to get my feet wet with containers.
+            <br>
+            
+          </div>
           <div class="mt-auto flex items-center justify-between pt-6 text-sm text-slate-500 dark:text-slate-400">
-            <div>Aug 2025 • 8 min</div>
+            <div>Aug 2025 • By mhzmmprt</div>
             <a href="#" class="inline-flex items-center gap-1 hover:underline">Read <i data-lucide="arrow-right" class="h-4 w-4"></i></a>
           </div>
         </article>
