Blog update topic

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <h3 class="text-lg font-semibold">Post title #3</h3>
           <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Short summary for the post, what it covers, and key takeaways.</p>
           <div class="mt-auto flex items-center justify-between pt-6 text-sm text-slate-500 dark:text-slate-400">
-            <div>Aug 2025 • 4 min</div>
+            <div>Aug 2025 • By mhzmmprt</div>
             <a href="#" class="inline-flex items-center gap-1 hover:underline">Read <i data-lucide="arrow-right" class="h-4 w-4"></i></a>
           </div>
         </article>
