--- a/index.html
+++ b/index.html
@@ -293,8 +293,14 @@
           </div>
         </article>
         <article class="flex flex-col rounded-2xl border border-slate-200 bg-white p-5 shadow-sm dark:border-slate-800 dark:bg-slate-900">
-          <h3 class="text-lg font-semibold">Post title #3</h3>
-          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">Short summary for the post, what it covers, and key takeaways.</p>
+          <h3 class="text-lg font-semibold">mbuild</h3>
+          <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">My attempt at reverse engineering the makeblock's mbuild communication protocol.</p>
+          <div class="mt-3 space-y-2 text-sm">
+            the pinout from top(1) to buttom(4)<br>
+            - UART TX
+            <br>
+            - UART RX 
+          </div>
           <div class="mt-auto flex items-center justify-between pt-6 text-sm text-slate-500 dark:text-slate-400">
             <div>Aug 2025 • By mhzmmprt</div>
             <a href="#" class="inline-flex items-center gap-1 hover:underline">Read <i data-lucide="arrow-right" class="h-4 w-4"></i></a>
@@ -335,7 +341,7 @@
           <div class="mt-3 space-y-3 text-sm">
             <a class="flex items-center justify-between rounded-lg border border-slate-200 p-2 hover:bg-slate-50 dark:border-slate-800 dark:hover:bg-slate-800" href="mailto:you@example.com"><span class="flex items-center gap-2"><i data-lucide="mail" class="h-4 w-4"></i> mhzmmprt.ops@gmail.com</span><i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
             <a class="flex items-center justify-between rounded-lg border border-slate-200 p-2 hover:bg-slate-50 dark:border-slate-800 dark:hover:bg-slate-800" href="tel:+66612345678"><span class="flex items-center gap-2"><i data-lucide="phone" class="h-4 w-4"></i> +66 623968657</span><i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
-            <a class="flex items-center justify-between rounded-lg border border-slate-200 p-2 hover:bg-slate-50 dark:border-slate-800 dark:hover:bg-slate-800" href="" target="_blank"><span class="flex items-center gap-2"><i data-lucide="globe" class="h-4 w-4"></i> Don't have</span><i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
+            <a class="flex items-center justify-between rounded-lg border border-slate-200 p-2 hover:bg-slate-50 dark:border-slate-800 dark:hover:bg-slate-800" href="https://line.me/ti/p/r0pfhnl3w1" target="_blank"><span class="flex items-center gap-2"><i data-lucide="globe" class="h-4 w-4"></i> QR Contact</span><i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
           </div>
         </div>
       </div>
