--- a/index.html
+++ b/index.html
@@ -236,8 +236,9 @@
             <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">guide to getting MPEG-Streamer Working with your klipper setup</p>
             <div class="mt-3 flex flex-wrap gap-2 text-xs">
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">PHP</span>
-              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">Shell</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">shell</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">C++</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">javascript</span>
             </div>
             <div class="mt-4 flex justify-end">
               <a href="#" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">Visit <i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
