--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">html</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">javascript</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">css</span>
+              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">c++</span>
             </div>
             <div class="mt-4 flex justify-end">
               <a href="https://psoj-hosting.web.app/" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">Visit <i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
@@ -220,7 +221,6 @@
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">javascript</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">json</span>
               <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">typescript</span>
-              <span class="rounded-full bg-slate-100 px-2.5 py-1 dark:bg-slate-800">lock</span>
             </div>
             <div class="mt-4 flex justify-end">
               <a href="https://github.com/mhzmmrpt/bot-discord" class="inline-flex items-center gap-1 rounded-xl border border-slate-200 px-3 py-1.5 text-xs font-medium dark:border-slate-700">Visit <i data-lucide="arrow-up-right" class="h-4 w-4"></i></a>
