--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -95,7 +95,7 @@
         <img src="img/Somtam.jpg"class="rounded"alt="Somtam"data-bs-toggle="tooltip"title="Hey yo I'm Somtam"width="210"height="140"/>
       </div>
       <div class="info-box">
-        <p><strong>Hobbies :</strong> <br>🏸 Badminton 🏀 Basketball 🎮 Play Games 💻 Coding</p>
+        <p><strong>Hobbies :</strong> <br>🏸 Badminton 🏀 Basketball 💻 Coding</p>
       </div>
     </div>
 
